@@ -384,8 +384,6 @@ Volunteers for these and other projects are welcome!
 
 266 Include TAGS support.
 
-272 Have a resource that controls whether EOF terminates DDD.
-
 273 JORGE HERNANDO <hernando@cnea.edu.ar> wants
     1)  when an array is marked for display, how about a popup where one
     writes the indexes ranges?, e.g. 5-8,* in order to show 
